python script working and site working

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,15 @@
-Results/*
-!Results/com/
-!Results/net/
-!Results/us/
-Results/com/*/DomainError/*
-Results/net/*/DomainError/*
-Results/us/*/DomainError/*
-Results/com/*/DomainTaken/*
-Results/net/*/DomainTaken/*
-Results/us/*/DomainTaken/*
-Results/com/*/DomainFree/*
-Results/net/*/DomainFree/*
-Results/us/*/DomainFree/*
-Scripts/FreeTakenGetDate/notes.txt
-Scripts/tempfile.txt
-Scripts/full_list_temp.txt
-./results.json
-results.json
+results/*
+!results/com/
+!results/net/
+!results/us/
+results/com/*/domainerror/*
+results/net/*/domainerror/*
+results/us/*/domainerror/*
+results/com/*/domaintaken/*
+results/net/*/domaintaken/*
+results/us/*/domaintaken/*
+results/com/*/domainfree/*
+results/net/*/domainfree/*
+results/us/*/domainfree/*
+workingnotes.txt
+freedict.txt
