changed script argument format

--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,15 @@ results/*
 !results/com/
 !results/net/
 !results/us/
+!results/results.json
 results/com/*/domainerror/*
 results/net/*/domainerror/*
-results/us/*/domainerror/*
+results/io/*/domainerror/*
 results/com/*/domaintaken/*
 results/net/*/domaintaken/*
-results/us/*/domaintaken/*
+results/io/*/domaintaken/*
 results/com/*/domainfree/*
 results/net/*/domainfree/*
-results/us/*/domainfree/*
+results/io/*/domainfree/*
 workingnotes.txt
-freedict.txt
+tester.json
