cleaning up readme and web project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,17 +11,32 @@
     "cooldomainname",
     "domainerror",
     "domainextensions",
+    "domainfileinput",
     "domainfree",
     "domainnames",
     "domaintaken",
+    "domainwordlistname",
     "englishdict",
+    "extensionfileinput",
+    "freefile",
+    "fulldomain",
+    "fulllisttemp",
     "iname",
+    "inputerror",
     "johnprovazek",
+    "jsonconvert",
+    "jsoninput",
+    "parallelinput",
+    "parallelprocess",
     "parseoutput",
+    "removedpath",
     "richardpenman",
     "sampleextensions",
     "samplenames",
+    "takenfile",
     "whois",
-    "whoisscrape"
+    "whoisoutput",
+    "whoisscrape",
+    "wordlist"
   ]
 }
